--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@eslib/lodash",
-  "version": "0.0.1",
-  "description": "(Lodash + ESlib = <3) Prototype methods for all the Lodash functions",
+  "version": "0.1.0",
+  "description": "(Lodash + ESlib = <3) All the Lodash functions available natively",
   "main": "dist/src/index.js",
   "directories": {
     "test": "test"
@@ -12,7 +12,7 @@
     "lint": "tslint .",
     "prepublish": "npm run lint && npm test",
     "pretest": "npm run build",
-    "tdd": "concurrently -k 'npm run watch' 'ava -w'",
+    "tdd": "concurrently -kr 'npm run watch' 'ava -w'",
     "test": "ava",
     "watch": "tsc -w"
   },
@@ -27,15 +27,15 @@
   },
   "homepage": "https://github.com/eslib/lodash#readme",
   "devDependencies": {
-    "@types/lodash": "^4.14.66",
-    "@types/node": "^8.0.0",
-    "ava": "^0.19.1",
-    "concurrently": "^3.4.0",
-    "tslint": "^5.4.3",
-    "typescript": "^2.3.4"
+    "@types/lodash": "^4.14.68",
+    "@types/node": "^8.0.10",
+    "ava": "^0.20.0",
+    "concurrently": "^3.5.0",
+    "tslint": "^5.5.0",
+    "typescript": "^2.4.1"
   },
   "dependencies": {
-    "eslib": "^0.0.4",
+    "eslib": "^0.1.1",
     "lodash": "^4.17.4"
   },
   "ava": {
