--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@eslib/lodash",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "(Lodash + ESlib = <3) All the Lodash functions available natively",
   "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "directories": {
     "test": "test"
   },
