--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@eslib/lodash",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "(Lodash + ESlib = <3) All the Lodash functions available natively",
+  "eslib": true,
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "directories": {
